==> stm32-hotspot/X-CUBE-MATTER-Extension/Projects/STM32WB5MM-DK/Applications/Matter/Temperature-Measure-App/System/Src/app_entry.cpp <==
#include "app_common.h"
#include "main.h"
#include "app_entry.h"
#include "app_thread.h"
#include "app_conf.h"
#include "hw_conf.h"
#include "cmsis_os.h"
#include "stm_logging.h"
#include "dbg_trace.h"
#include "shci_tl.h"
#include "stm32_lpm.h"
#include "app_ble.h"
#include "app_debug.h"
#include "shci.h"
#include "stm32wb5mm_dk_lcd.h"
#include "stm32_lcd.h"
#include "ssd1315.h"
#include "stm_ext_flash.h"
#include "AppTask.h"
#include "flash_wb.h"
#include "STM32FreeRtosHooks.h"
#include "main.h"
#include "otp.h"
#define POOL_SIZE (CFG_TLBLE_EVT_QUEUE_LENGTH*4*DIVC(( sizeof(TL_PacketHeader_t) + TL_BLE_EVENT_FRAME_SIZE ), 4))

static void SystemPower_Config(void) {
	// Before going to stop or standby modes, do the settings so that system clock and IP80215.4 clock
	// start on HSI automatically
	LL_RCC_HSI_EnableAutoFromStop();

	/**
	 * Select HSI as system clock source after Wake Up from Stop mode
	 */
	LL_RCC_SetClkAfterWakeFromStop(LL_RCC_STOP_WAKEUPCLOCK_HSI);

	/* Initialize low power manager */
	UTIL_LPM_Init();

	/* Disable low power mode until INIT is complete */
	UTIL_LPM_SetOffMode(1 << CFG_LPM_APP, UTIL_LPM_DISABLE);
	UTIL_LPM_SetStopMode(1 << CFG_LPM_APP, UTIL_LPM_DISABLE);

	/* Enable RAM1 (because OT instance.o is located here for Concurrent Mode */
	LL_C2_AHB1_GRP1_EnableClock(LL_C2_AHB1_GRP1_PERIPH_SRAM1);
	LL_C2_AHB1_GRP1_EnableClockSleep(LL_C2_AHB1_GRP1_PERIPH_SRAM1);

	return;
}

static void appe_Tl_Init(void) {

	/**< Reference table initialization */
	TL_Init();

    MtxShciId = osMutexNew(NULL);
	SemShciId = osSemaphoreNew(1, 0, NULL); /*< Create the semaphore and make it busy at initialization */

    /** FreeRTOS system task creation */
    ShciUserEvtProcessId = osThreadNew(ShciUserEvtProcess, NULL, &ShciUserEvtProcess_attr);

	return;
}

static void APPE_SysUserEvtRx(void *pPayload) {
	TL_AsynchEvt_t *p_sys_event;
	p_sys_event = (TL_AsynchEvt_t*) (((tSHCI_UserEvtRxParam*) pPayload)->pckt->evtserial.evt.payload);

	switch (p_sys_event->subevtcode) {
	case SHCI_SUB_EVT_CODE_READY:
		APPE_SysEvtReadyProcessing();
		break;

	case SHCI_SUB_EVT_ERROR_NOTIF:
		APPE_SysEvtError((SCHI_SystemErrCode_t) (p_sys_event->payload[0]));
		break;

	default:
		break;
	}
	return;
}

static void APPE_SysEvtReadyProcessing(void) {
	/* Traces channel initialization */
    APPD_EnableCPU2();

	/* Configuration to CPU2 */
	SHCI_C2_CONFIG_Cmd_Param_t config_param = {0};
	uint32_t Ot_NVMAddr = 0;

	/* In the Context of Dynamic Concurrent mode, the Init and start of each stack must be split and executed
	 * in the following order :
     * APP_BLE_Init_Dyn_1()    : BLE Stack Init until it's ready to start ADV
     * APP_THREAD_Init_Dyn_1() : Thread Stack Init until it's ready to be configured (default channel, PID, etc...)
     * APP_THREAD_Init_Dyn_2() : Thread Stack configuration (default channel, PID, etc...) to be able to start scanning
     *                           or joining a Thread Network
	 */

    APP_THREAD_CheckWirelessFirmwareInfo();

	/* Set the address that will be used by OT stack for NVM data management */
	if(NM_GetOtNVMAddr(&Ot_NVMAddr) == NVM_OK){
		config_param.ThreadNvmRamAddress = Ot_NVMAddr;
		(void)SHCI_C2_Config(&config_param);
	}

	APP_DBG("1- Initialisation of BLE Stack...");
	APP_BLE_Init_Dyn_1();

	APP_DBG("2- Initialisation of OpenThread Stack...");
    APP_THREAD_Init_Dyn_1();
    APP_THREAD_Init_Dyn_2();

    APP_DBG("* GetAppTask().InitMatter();*");
	GetAppTask().InitMatter();

    APP_DBG("* GetAppTask().StartAppTask();*");
	GetAppTask().StartAppTask();

    APP_DBG("Initialisation finished");

#if ( CFG_LPM_SUPPORTED == 1)
  /* Thread stack is initialized, low power mode can be enabled */
  UTIL_LPM_SetOffMode(1U << CFG_LPM_APP, UTIL_LPM_ENABLE);
  UTIL_LPM_SetStopMode(1U << CFG_LPM_APP, UTIL_LPM_ENABLE);
#endif

	return;
}

void shci_notify_asynch_evt(void *pdata) {
	UNUSED(pdata);

    osThreadFlagsSet(ShciUserEvtProcessId, 1);
	return;
}

void shci_cmd_resp_release(uint32_t flag) {
	UNUSED(flag);
	osSemaphoreRelease(SemShciId);
	return;
}

void shci_cmd_resp_wait(uint32_t timeout) {

    osSemaphoreAcquire(SemShciId, pdMS_TO_TICKS(timeout));
	return;
}

void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin) {
	switch (GPIO_Pin) {
	case BUTTON_SW1_PIN:
		APP_DBG("BUTTON 1 PUSHED !");
		osThreadFlagsSet(OsPushButtonProcessId, 1);
		break;

	case BUTTON_SW2_PIN:
		APP_DBG("BUTTON 2 PUSHED ! Not used");
		break;

	case BUTTON_SW3_PIN:
		APP_DBG("BUTTON 3 PUSHED ! Not used");
		break;

	default:
		break;
	}

	return;
}
